# QuDAG

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build_cli.sh  crypto_bench_runner  performance_report.md
.claude/: config.json  settings.json
.roo/: REMOTE-MCP-USAGE.md  mcp.json
benchmarks/: Cargo.toml
benchmarks/benches/: dark_addressing_benchmarks.rs  memory_benchmarks.rs  system_benchmarks.rs
benchmarks/cli/: command_benchmarks.rs  resource_tracker.rs
benchmarks/src/: baseline.rs  guards.rs  lib.rs  metrics.rs  monitoring.rs  regression.rs  scenarios.rs  system.rs  utils.rs
build-temp/: .rustc_info.json
cli-standalone/: Cargo.toml
core/crypto/: Cargo.toml
core/crypto/benches/: crypto_benchmarks.rs  crypto_optimized.rs  hqc_benchmarks.rs  ml_dsa_performance.rs  ml_kem_benchmarks.rs  mldsa_benchmarks.rs
core/crypto/examples/: test_ml_kem_api.rs
core/crypto/src/: encryption.rs  error.rs  fingerprint.rs  hash.rs  hqc.rs  lib.rs  ml_dsa.rs  ml_kem.rs  signature.rs
core/crypto/src/encryption/: hqc.rs  mod.rs
core/crypto/src/kem/: ml_kem.rs  mod.rs
core/crypto/src/ml_dsa/: mod.rs
core/crypto/src/ml_kem/: mod.rs
core/crypto/src/optimized/: simd_utils.rs
core/crypto/tests/: basic_ml_dsa_test.rs  concurrent_tests.rs  fingerprint_tests.rs  hqc_tests.rs  integration_tests.rs  ml_dsa_comprehensive_tests.rs  ml_dsa_tests.rs  ml_kem_tests.rs  nist_test_vectors.rs  prop_tests.rs  security_tests.rs  test_vectors.rs  timing_tests.rs
core/crypto/tests/.test_vectors/: mlkem768_pk.txt
core/crypto/tests/security/: constant_time_tests.rs  memory_tests.rs  ml_kem_security_tests.rs
core/dag/: Cargo.toml
core/dag/benches/: consensus_benchmarks.rs  dag_benchmarks.rs  finality_benchmarks.rs  qr_avalanche_benchmarks.rs
core/dag/examples/: basic_usage.rs
core/dag/src/: consensus.rs  consensus_tests.rs  dag.rs  edge.rs  error.rs  graph.rs  invariant_tests.rs  lib.rs  lib_test_compilation.rs  module_exports_tests.rs  node.rs  tip_selection.rs  vertex.rs
core/dag/tests/: byzantine_tests.rs  concurrent_consensus_tests.rs  consensus_performance_tests.rs  integration_qr_avalanche.rs  integration_tests.rs  liveness_tests.rs  network_conditions_tests.rs  network_sim.rs  qr_avalanche_tests.rs  safety_tests.rs
core/network/: Cargo.toml
core/network/benches/: nat_traversal_benchmarks.rs  network_benchmarks.rs  peer_benchmarks.rs  queue_benchmarks.rs  routing_benchmarks.rs  throughput.rs  throughput_optimized.rs
core/network/src/: circuit_breaker.rs  connection.rs  connection_pool.rs  dark_resolver.rs  discovery.rs  dns.rs  kademlia.rs  lib.rs  message.rs  metrics.rs  nat_traversal.rs  onion.rs  p2p.rs  peer.rs  quantum_crypto.rs  router.rs  routing.rs  shadow_address.rs  traffic_obfuscation.rs  transport.rs  types.rs
core/network/src/optimized/: adaptive_batch.rs  mod.rs
core/network/tests/: comprehensive_unit_tests.rs  concurrent_tests.rs  crypto_dag_integration_tests.rs  edge_case_tests.rs  error_handling_tests.rs  integration_tests.rs  message_handling.rs  message_tests.rs  nat_traversal_tests.rs  onion_integration_test.rs  onion_routing_tests.rs  onion_tests.rs  optimization_validation.rs  resilience_tests.rs  router_tests.rs  security_tests.rs  shadow_address_integration_tests.rs  simple_obfuscation_test.rs  traffic_obfuscation_tests.rs  transport_send_sync_test.rs
core/network/tests/security/: anonymity_tests.rs
core/protocol/: Cargo.toml
core/protocol/benches/: protocol_benchmarks.rs
core/protocol/src/: allocator.rs  compatibility.rs  config.rs  coordinator.rs  handshake.rs  instrumentation.rs  lib.rs  message.rs  metrics.rs  node.rs  optimization_config.rs  persistence.rs  rpc_server.rs  state.rs  synchronization.rs  types.rs  validation.rs  versioning.rs
core/protocol/tests/: persistence_tests.rs  protocol_tests.rs
docs/: fly-io-deployment-research.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cli_fuzz.rs  crypto_fuzz.rs  network_fuzz.rs  protocol_fuzz.rs
qudag/: Cargo.toml  README.md
qudag-exchange/: Cargo.toml
qudag-exchange/benches/: exchange_benchmarks.rs
qudag-exchange/cli/: Cargo.toml
qudag-exchange/cli/src/: main.rs
qudag-exchange/core/: Cargo.toml
qudag-exchange/core/src/: account.rs  config.rs  consensus.rs  error.rs  fee_model.rs  immutable.rs  ledger.rs  lib.rs  metering.rs  payout.rs  state.rs  transaction.rs  types.rs
qudag-exchange/core/tests/: business_plan_integration.rs  fee_model_integration.rs  immutable_deployment_test.rs
qudag-exchange/crates/core/: Cargo.toml
qudag-exchange/docs/: cli-reference.md
qudag-exchange/qudag-exchange-cli/: Cargo.toml
qudag-exchange/qudag-exchange-cli/src/: main.rs
qudag-exchange/qudag-exchange-core/: Cargo.toml
qudag-exchange/qudag-exchange-core/src/: account.rs  error.rs  metering.rs  transaction.rs  types.rs
qudag-exchange/qudag-exchange-core/tests/: integration_test.rs  test_ledger.rs  test_resource_metering.rs  test_transactions.rs  test_vault_integration.rs
qudag-exchange/qudag-exchange-server/: Cargo.toml
qudag-exchange/qudag-exchange-server/src/: main.rs
qudag-exchange/qudag-exchange-wasm/: Cargo.toml
qudag-exchange/src/: error.rs  lib.rs
qudag-exchange/tests/: performance_tests.rs
qudag-exchange/tests/integration/: Cargo.toml
qudag/src/: lib.rs
tools/cli/: Cargo.toml  README.md
tools/cli/src/: async_optimizations.rs  commands.rs  config.rs  lib.rs  main.rs  mocks.rs  node_manager.rs  output.rs  peer_manager.rs  performance.rs  rpc.rs  startup.rs
tools/cli/tests/: cli_command_tests.rs  mock_integration_tests.rs  network_operations_tests.rs  node_manager_tests.rs  node_status_tests.rs  peer_management_tests.rs  peer_manager_tests.rs  rpc_integration_tests.rs
tools/cli/tests/unit/: args_test.rs
tools/simulator/: Cargo.toml
tools/simulator/benches/: simulator_benchmarks.rs
tools/simulator/src/: attacks.rs  conditions.rs  lib.rs  metrics.rs  network.rs  reports.rs  scenarios.rs  visualization.rs
tools/simulator/src/tests/: integration_tests.rs  metrics_tests.rs  network_tests.rs  property_tests.rs  scenarios_tests.rs
(+116 files in other folders)
