[workspace]
members = [
    "core/crypto",
    "core/dag",
    "core/network",
    "core/protocol",
    "tools/cli",
    "tools/simulator",
]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
proptest = "1.0"
anyhow = "1.0"
futures = "0.3"
blake3 = "1.5"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["rUv <https://github.com/ruvnet>"]
repository = "https://github.com/ruvnet/QuDAG"
license = "MIT OR Apache-2.0"