[package]
name = "qudag-benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
rand.workspace = true
metrics.workspace = true

qudag-protocol = { path = "../core/protocol" }
qudag-simulator = { path = "../tools/simulator" }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "system_benchmarks"
harness = false

[[bench]]
name = "dark_addressing_benchmarks"
harness = false