[package]
name = "qudag-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
zeroize.workspace = true
tracing.workspace = true
anyhow.workspace = true
rayon = "1.7"
subtle.workspace = true
tokio.workspace = true
serde.workspace = true
bincode.workspace = true
rand.workspace = true
blake3.workspace = true

# Note: Project dependencies disabled due to compilation issues
# These will be re-enabled once the core modules are fixed
# qudag-crypto = { path = "../core/crypto" }
# qudag-network = { path = "../core/network" }
# qudag-protocol = { path = "../core/protocol" }
# qudag-dag = { path = "../core/dag" }

[[bin]]
name = "crypto_fuzz"
path = "fuzz_targets/crypto_fuzz.rs"
test = false
doc = false

[[bin]]
name = "network_fuzz"
path = "fuzz_targets/network_fuzz.rs"
test = false
doc = false

[[bin]]
name = "protocol_fuzz"
path = "fuzz_targets/protocol_fuzz.rs"
test = false
doc = false

[[bin]]
name = "cli_fuzz"
path = "fuzz_targets/cli_fuzz.rs"
test = false
doc = false