[package]
name = "qudag-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
blake3.workspace = true
subtle.workspace = true
zeroize.workspace = true
rand.workspace = true
rand_core.workspace = true

[dev-dependencies]
proptest.workspace = true
