[package]
name = "qudag-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
blake3.workspace = true
subtle.workspace = true
zeroize.workspace = true
rand.workspace = true
rand_core.workspace = true
constant_time_eq = "0.3"

[features]
default = ["std"]
std = ["rand/std"]
no-std = []

[dev-dependencies]
proptest.workspace = true
hex-literal.workspace = true
criterion.workspace = true
tempfile = "3.0"
libc = "0.2"
hex = "0.4"

[[bench]]
name = "crypto_benchmarks"
harness = false

[[bench]]
name = "crypto_optimized"
harness = false

[[bench]]
name = "ml_kem_benchmarks"
harness = false

[[bench]]
name = "mldsa_benchmarks"
harness = false

[[bench]]
name = "hqc_benchmarks"
harness = false

[[example]]
name = "ml_kem_example"
path = "../../examples/crypto/ml_kem_example.rs"

[[example]]
name = "ml_dsa_example"
path = "../../examples/crypto/ml_dsa_example.rs"

[[example]]
name = "fingerprint_example"
path = "../../examples/crypto/fingerprint_example.rs"
