[package]
name = "qudag-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
blake3.workspace = true
subtle.workspace = true
zeroize.workspace = true
rand.workspace = true
rand_core.workspace = true
rand_chacha = "0.3"
constant_time_eq = "0.3"
ml-kem = "0.2"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"
sha3 = "0.10"
lazy_static = "1.4"
# ML-DSA (Dilithium) implementation
pqcrypto-dilithium = "0.5"
# HQC (Hamming Quasi-Cyclic) implementation
pqcrypto-hqc = "0.1"

[features]
default = ["std"]
std = ["rand/std"]
no-std = []

[dev-dependencies]
proptest.workspace = true
hex-literal.workspace = true
criterion.workspace = true
tempfile = "3.0"
libc = "0.2"
hex = "0.4"
tokio.workspace = true
tokio-test.workspace = true
rayon = "1.7"
statrs = "0.16"

[[bench]]
name = "crypto_benchmarks"
harness = false

[[bench]]
name = "crypto_optimized"
harness = false

[[bench]]
name = "ml_kem_benchmarks"
harness = false

[[bench]]
name = "mldsa_benchmarks"
harness = false

[[bench]]
name = "hqc_benchmarks"
harness = false

[[example]]
name = "ml_kem_example"
path = "../../examples/crypto/ml_kem_example.rs"

[[example]]
name = "ml_dsa_example"
path = "../../examples/crypto/ml_dsa_example.rs"

[[example]]
name = "fingerprint_example"
path = "../../examples/crypto/fingerprint_example.rs"

[[example]]
name = "test_ml_dsa_simple"
path = "../../test_ml_dsa_simple.rs"
