[package]
name = "qudag-dag"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
tracing = "0.1"
parking_lot = "0.12"
blake3 = "1.5"
time = { version = "0.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"