[package]
name = "qudag-dag"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
tokio.workspace = true
blake3 = "1.5"
parking_lot = "0.12"
dashmap = "5.5"
rayon = "1.8"
lru = "0.12"
rand = "0.8"

[dev-dependencies]
proptest.workspace = true
tokio-test = "0.4"
rand = "0.8"
criterion.workspace = true

[[bench]]
name = "dag_benchmarks"
harness = false

[[bench]]
name = "consensus_benchmarks"
harness = false

[[bench]]
name = "finality_benchmarks"
harness = false
