[package]
name = "qudag-dag"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
tokio.workspace = true
futures.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
blake3.workspace = true
uuid.workspace = true
bincode.workspace = true
rand.workspace = true
lru.workspace = true
metrics.workspace = true
anyhow.workspace = true

# Additional dependencies needed by graph module
dashmap = "5.5"
rayon = "1.8"

# Other dependencies
qudag-crypto = { path = "../crypto" }

[dev-dependencies]
proptest.workspace = true
