[package]
name = "qudag-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
tokio.workspace = true
futures.workspace = true
blake3.workspace = true
quinn = "0.10"
quinn-proto = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
ring = "0.17"
bytes = "1.5"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
libp2p = { version = "0.53", features = ["tcp", "dns", "identify", "ping", "mdns", "noise", "yamux", "gossipsub"] }
chacha20poly1305 = "0.10"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
subtle = "2.5"

[dev-dependencies]
proptest.workspace = true
mockito = "1.2"
serde_json = "1.0"
bincode = "1.3"
tokio-test = "0.4"
test-log = "0.2"
