[package]
name = "qudag-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["full"] }
qudag-crypto = { path = "../crypto" }
qudag-dag = { path = "../dag" }
qudag-network = { path = "../network" }

[dev-dependencies]
proptest.workspace = true
tokio-test = "0.4"
