[package]
name = "qudag-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["full"] }
parking_lot.workspace = true
qudag-crypto = { path = "../crypto" }
qudag-dag = { path = "../dag" }
qudag-network = { path = "../network" }
toml = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
bincode = "1.3"
blake3 = "1.5"
rand = "0.8"
serde_json.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "protocol_benchmarks"
harness = false
