[package]
name = "qudag-exchange-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "qudag-exchange"
path = "src/main.rs"

[dependencies]
# QuDAG dependencies
qudag-exchange-core = { path = "../core" }
qudag-vault = { workspace = true }

# CLI dependencies
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Additional CLI dependencies
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
dirs = "5.0"
toml = "0.8"
rand = "0.8"
hex = "0.4"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"