[package]
name = "qudag-exchange-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# QuDAG dependencies
qudag-vault = { workspace = true }
qudag-dag = { workspace = true }
qudag-crypto = { workspace = true }

# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Crypto and security
zeroize = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }

# Additional core dependencies
dashmap = "6.0"
parking_lot = "0.12"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
criterion = "0.5"

[[bench]]
name = "ruv_operations"
harness = false