[package]
name = "qudag-exchange-core"
version = "0.1.0"
authors = ["QuDAG Exchange Team"]
edition = "2021"
license = "MIT"

[dependencies]
# QuDAG dependencies
qudag-vault = { path = "../../core/vault" }
qudag-dag = { path = "../../core/dag" }
qudag-crypto = { path = "../../core/crypto" }

# Core dependencies
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"

# Crypto and security
zeroize = { version = "1.7", features = ["zeroize_derive"] }
sha3 = "0.10"
blake3 = "1.5"

# Additional core dependencies
dashmap = "6.0"
parking_lot = "0.12"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
criterion = "0.5"

[[bench]]
name = "ruv_operations"
harness = false