[package]
name = "qudag-exchange-core"
version = "0.1.0"
authors = ["QuDAG Exchange Team"]
edition = "2021"
license = "MIT"

[dependencies]
# QuDAG dependencies
qudag-vault-core = { path = "../../core/vault" }
qudag-dag = { path = "../../core/dag" }
qudag-crypto = { path = "../../core/crypto" }

# Core dependencies
tokio = { version = "1.40", features = ["full"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = { version = "1.0", optional = true }
tracing = "0.1"
async-trait = "0.1"

# Crypto and security
zeroize = { version = "1.7", features = ["zeroize_derive"] }
sha3 = "0.10"
blake3 = { version = "1.5", default-features = false }
bincode = { version = "1.3", default-features = false }

# Additional core dependencies
dashmap = { version = "6.0", optional = true }
parking_lot = { version = "0.12", optional = true }
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
hex = "0.4"

# WASM-specific dependencies
getrandom = { version = "0.2", features = ["js"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
base64 = "0.22"

[features]
default = ["std"]
std = [
    "serde/std",
    "blake3/std",
    "bincode/std",
    "dashmap",
    "parking_lot",
    "tokio",
    "thiserror"
]
wasm = ["getrandom", "wasm-bindgen"]

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.4"
criterion = "0.5"

