[package]
name = "qudag-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
tokio.workspace = true
anyhow.workspace = true

# CLI specific dependencies
clap = { version = "4.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "std", "env-filter"] }
colored = "2.0"
tabled = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
uuid.workspace = true
bincode.workspace = true
metrics.workspace = true

# Missing dependencies that were causing compilation errors
futures = "0.3"
lru = "0.12"
serde_json = "1.0"
pin-project = "1.0"
hex = "0.4"
rand = "0.8"
dirs = "5.0"
libp2p = "0.53"
async-trait = "0.1"
toml = "0.8"
libc = "0.2"
whoami = "1.4"

# Internal dependencies
qudag-protocol = { path = "../../core/protocol" }
qudag-network = { path = "../../core/network" }
qudag-dag = { path = "../../core/dag" }
qudag-crypto = { path = "../../core/crypto" }

[[bin]]
name = "qudag"
path = "src/main.rs"

[[example]]
name = "peer_management"
path = "../../examples/peer_management_example.rs"

[dev-dependencies]
proptest.workspace = true
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }