[package]
name = "qudag-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
uuid.workspace = true
clap = { version = "4.3", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
hex = "0.4"
rand = "0.8"
lru = "0.12"
libc = "0.2"
whoami = "1.5"
tracing-subscriber = "0.3"
pin-project = "1.1"
qudag-crypto = { path = "../../core/crypto" }
qudag-dag = { path = "../../core/dag" }
qudag-network = { path = "../../core/network" }
qudag-protocol = { path = "../../core/protocol" }

[[bin]]
name = "qudag-cli"
path = "src/main.rs"

[dev-dependencies]
proptest.workspace = true
