[package]
name = "qudag-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Command-line interface for QuDAG - Manage nodes, peers, and dark addresses"
documentation = "https://docs.rs/qudag-cli"
readme = "README.md"
keywords = ["cli", "quantum", "dag", "p2p", "darknet"]
categories = ["command-line-utilities"]

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
uuid.workspace = true
clap = { version = "4.3", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
hex = "0.4"
rand = "0.8"
lru = "0.12"
rpassword = "7.3"
libc = "0.2"
whoami = "1.5"
tracing-subscriber = "0.3"
pin-project = "1.1"
libp2p = { version = "0.53", features = ["identify", "kad", "gossipsub", "ping", "relay", "dcutr", "autonat", "request-response", "dns", "tcp", "noise", "yamux", "websocket", "quic", "tls", "metrics"] }
qudag-crypto = { version = "0.2.0", path = "../../core/crypto" }
qudag-dag = { version = "0.2.0", path = "../../core/dag" }
qudag-network = { version = "0.2.0", path = "../../core/network" }
qudag-protocol = { version = "0.2.0", path = "../../core/protocol" }
qudag-vault-core = { version = "0.2.0", path = "../../core/vault" }

[[bin]]
name = "qudag"
path = "src/main.rs"

[dev-dependencies]
proptest.workspace = true
