[package]
name = "qudag-simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
qudag-protocol = { path = "../../core/protocol" }
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
histogram = "0.6"
plotters = "0.3"
csv = "1.2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest.workspace = true
tokio-test.workspace = true
