[package]
name = "qudag-exchange-integration-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# QuDAG Exchange modules
qudag-exchange-core = { path = "../../core" }
qudag-exchange-cli = { path = "../../cli" }

# Testing dependencies
tokio = { workspace = true, features = ["test-util"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Test utilities
serial_test = "3.0"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[dev-dependencies]